--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
