--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "framer-motion": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "next": "13.1.6",
