--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moment": "^1.1.3",
+    "recoil": "^0.7.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
